logs/validate.20260408-005310.log
Mode: isolate
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error[E0004]: non-exhaustive patterns: `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf` not covered
   --> src/Chap37/BSTAVLMtEph.rs:497:51
    |
497 | ...                   match tg_l.right {
    |                             ^^^^^^^^^^ pattern `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf` not covered
    |
note: `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree<T>` defined here
   --> src/Chap23/BalBinTreeStEph.rs:65:14
    |
 65 |     pub enum BalBinTree<T> {
    |              ^^^^^^^^^^
 66 |         Leaf,
    |         ---- not covered
    = note: the matched value is of type `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree<T>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
531 ~                                                 },
532 ~                                                 Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf => todo!(),
    |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
Elapsed: 9s
Sampled Memory Usage: peak rust_verify RSS: 5005MB, peak z3 RSS: 295MB, min free: 21399MB
Sampled CPU Usage: rust_verify: 48s, z3 children: 8s
